[gd_scene load_steps=14 format=1]

[ext_resource path="res://scene/menu.gd" type="Script" id=1]
[ext_resource path="res://asset/holder.png" type="Texture" id=2]
[ext_resource path="res://asset/coinholder.png" type="Texture" id=3]
[ext_resource path="res://font/Lobster_1.3.otf" type="DynamicFontData" id=4]
[ext_resource path="res://asset/worddown.png" type="Texture" id=5]
[ext_resource path="res://asset/soundon.png" type="Texture" id=6]
[ext_resource path="res://asset/correctsign.png" type="Texture" id=7]
[ext_resource path="res://asset/crossmenu.png" type="Texture" id=8]
[ext_resource path="res://scene/AnimationPlayer.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]

font/size = 28
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="Animation" id=2]

resource/name = "animin"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/rotation")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/rotation")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}

[sub_resource type="Animation" id=4]

resource/name = "animout"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/rotation")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[node name="menuin" type="Control"]

rect/rotation = 90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 112.5, 215 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 83.5, 153 )
transform/scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 3 )

[node name="Label4" type="Label" parent="Sprite1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -36.0
margin/top = -12.0
margin/right = 88.0
margin/bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0625, 0.00292969, 0.00292969, 1 )
text = "Sound"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="englishsprite" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 135.5, 192 )
transform/scale = Vector2( 0.07, 0.07 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="hindisprite" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 135.5, 232 )
transform/scale = Vector2( 0.07, 0.07 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="soundbtn" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 129, 137 )
transform/scale = Vector2( 0.35, 0.35 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="englishtohindi" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 61.0
margin/top = 190.0
margin/right = 169.0
margin/bottom = 249.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0625, 0.00292969, 0.00292969, 1 )
text = "English to
Hindi"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="englishtohindi"]

transform/pos = Vector2( 178, 16 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="hinditoenglish" type="Label" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 61.0
margin/top = 230.0
margin/right = 169.0
margin/bottom = 289.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0625, 0.00292969, 0.00292969, 1 )
text = "Hindi to
English"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="hinditoenglish"]

visibility/visible = false
transform/pos = Vector2( 180, 18 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="Label5" type="Label" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 52.0
margin/top = 198.0
margin/right = 365.0
margin/bottom = 390.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0625, 0.00292969, 0.00292969, 1 )
text = "
     Solve The Question 
       And Choose The 
       Correct Answer. "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
alignment = 0

[node name="backmain" type="TouchScreenButton" parent="VBoxContainer"]

transform/pos = Vector2( 156, 89 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="LinkButton" type="LinkButton" parent="."]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 83.0
margin/top = 293.0
margin/right = 170.0
margin/bottom = 307.0
custom_colors/font_color = Color( 0.015625, 0.0154419, 0.0154419, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Privacy Policy"

[node name="AnimationPlayer" parent="." instance=ExtResource( 9 )]

anims/animin = SubResource( 2 )
"anims/animin (copy)" = SubResource( 3 )
anims/animout = SubResource( 4 )

[connection signal="pressed" from="englishsprite" to="." method="_on_englishsprite_pressed"]

[connection signal="pressed" from="hindisprite" to="." method="_on_hindisprite_pressed"]

[connection signal="pressed" from="soundbtn" to="." method="_on_soundbtn_pressed"]

[connection signal="released" from="soundbtn" to="." method="_on_soundbtn_released"]

[connection signal="pressed" from="VBoxContainer/backmain" to="." method="_on_backmain_pressed"]

[connection signal="released" from="VBoxContainer/backmain" to="." method="_on_backmain_released"]

[connection signal="pressed" from="LinkButton" to="." method="_on_LinkButton_pressed"]


